# kalkulacka

./: CMakeLists.txt
kalkulacka/: CMakeLists.txt  funkce.cpp  funkce.h  input.txt  kalkulacka.cpp  kalkulacka.h  output.cpp  output.h  ui.cpp  ui.h
