# CMakeList.txt : CMake project for kalkulacka, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (kalkulacka "kalkulacka.cpp" "kalkulacka.h"  "funkce.cpp" "funkce.h")

# TODO: Add tests and install targets if needed.
